--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collab-object",
+  "name": "resource",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -29,7 +29,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "alias": {
     "~/": "./src"
   }
