--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
   "dependencies": {
     "@types/react": "16.9.16",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "5.1.3",
     "@types/uuid": "3.4.6",
     "firebase": "7.6.0",
+    "firebase-mock": "2.3.2",
     "jest": "24.9.0",
-    "mocha": "6.2.2",
     "node-sass": "4.13.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-firebase-hooks": "2.1.1",
+    "react-inspector": "4.0.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.0.1",
+    "react-use-gesture": "6.0.14",
     "slate": "0.55.0",
     "slate-react": "0.55.0",
+    "styled-components": "4.4.1",
     "uuid": "3.3.3"
   },
   "devDependencies": {
